# showell-mover

./: .gitignore  README.md  pyproject.toml
src/shotwell_mover/: cli.py
